--- a/app/globals.css
+++ b/app/globals.css
@@ -86,6 +86,7 @@ body {
   }
   .theme {
     --animate-aurora: aurora 8s ease-in-out infinite alternate;
+    --animate-grid: grid 15s linear infinite;
   }
 }
 
@@ -119,6 +120,14 @@ body {
   100% {
     background-position: 0% 50%;
     transform: rotate(-5deg) scale(0.9);
+    }
+  }
+  @keyframes grid {
+  0% {
+    transform: translateY(-50%);
+    }
+  100% {
+    transform: translateY(0);
     }
   }
 }
